refactor: MenuList 관련 메서드 생성